added action manager and added http interface
